<resources>
    <string name="app_name">myWay Solar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_compulsory_field">This field is compulsory</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_text">LOGIN</string>
    <string name="title_activity_navigational">NavigationalActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="today">LISTS</string>
    <string name="spare_parts">SPARE PARTS</string>
    <string name="total_consumers">TOTAL CONSUMERS</string>
    <string name="open">Open</string>
    <string name="overdue">Overdue</string>
    <string name="closure">Closure</string>
    <string name="new_complaints_received">New Complaints Received</string>
    <string name="click_here">Click Here</string>
    <string name="spare_parts_requested">Spare Parts Requests</string>
    <string name="spare_parts_pending">Spare parts Requests Pending</string>
    <string name="to_be_closed_by_today">To be Closed by Today</string>
    <string name="rejected_complaints">Rejected Complaints by Technical Partner</string>

    <string-array name="login_types">
        <item>Admin</item>
        <item>Customer</item>
        <item>Management</item>
        <item>Client</item>
        <item>Technical Partner</item>

    </string-array>

</resources>
