<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:background="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:text="@string/login_text"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:textStyle="normal" />
            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                >
                <View style="@style/Divider_white" />
            </LinearLayout>



            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:background="@drawable/rectangular_background_curved_edges"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:drawablePadding="10dp"
                android:textSize="15sp"
                android:textColorHint="#ffffff"
                android:paddingEnd="5dp"
                android:paddingStart="20dp"
                android:textStyle="normal" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="10dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rectangular_background_curved_edges"
                android:hint="@string/prompt_password"
                android:textColorHint="#ffffff"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingEnd="5dp"
                android:paddingStart="20dp"
                android:textSize="15sp"
                android:layout_marginTop="25dp"
                android:textStyle="normal"
                tools:ignore="InvalidImeActionId" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:textColor="#4682b4"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:background="@drawable/rectangular_button_with_curves"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner2"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                />
        </LinearLayout>

    </ScrollView>


</RelativeLayout>
